# linkedincli

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
linkedincli/: __main__.py  browser.py  cli.py  config.py  cookies.py  exceptions.py  models.py  session.py  utils.py
tests/: conftest.py  test_browser.py  test_cli.py  test_config.py  test_cookies.py  test_session.py  test_smoke.py
